menambahkan data satu mahasiswa di file mmahasiswa.html

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -11,6 +11,7 @@
         <li>Angger : 1826473826</li>
         <li>Dhisma : 1826473826</li>
         <li>Kusuma : 1826473826</li>
+        <li>Anggerr : 1826473826</li>
     </ul>
 </body>
 </html>
