Mengubah NPM angger dan menambahkan paragraf

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coba git</title>
-</head>
-<body>
-    <h3>Data Mahasiswa</h3>
+  </head>
+  <body>
+    <h1>Data Mahasiswa</h1>
     <ul>
-        <li>Angger : 1826473826</li>
-        <li>Dhisma : 1826473826</li>
-        <li>Kusuma : 1826473826</li>
-        <li>Anggerr : 1826473826</li>
+      <li>Angger : 7382682729</li>
+      <li>Dhisma : 1826473826</li>
+      <li>Kusuma : 1826473826</li>
+      <li>Anggerr : 1826473826</li>
     </ul>
-</body>
+    <p>Contoh paragraf</p>
+  </body>
 </html>
