Mengubah isi dari file mahasiswa.html

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coba git</title>
-</head>
-<body>
-    <h3>Data Mahasiswa</h3>
+  </head>
+  <body>
+    <h4>Data Mahasiswa</h4>
     <ul>
-        <li>Angger : 1826473826</li>
-        <li>Dhisma : 1826473826</li>
-        <li>Kusuma : 1826473826</li>
-        <li>Anggerr : 1826473826</li>
+      <li>Dhisma : 1826473826</li>
+      <li>Kusuma : 1826473826</li>
+      <li>Anggerr : 1826473826</li>
     </ul>
-</body>
+    <p>coba paragraf</p>
+  </body>
 </html>
