menambahkan satu mahasiswa baru

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -12,6 +12,7 @@
       <li>Dhisma : 1826473826</li>
       <li>Kusuma : 1826473826</li>
       <li>Anggerr : 1826473826</li>
+      <li>Anggerrr : 1826473826</li>
     </ul>
 
     <p>Contoh paragraf</p>
